prevent uploads clobbering build-logs
Signed-off-by: Paul Burton <paulburton89@gmail.com>

--- a/site/Makefile
+++ b/site/Makefile
@@ -85,7 +85,7 @@ ssh_upload: publish
 	scp -r $(OUTPUTDIR)/* $(SSH_HOST):$(SSH_TARGET_DIR)
 
 rsync_upload: publish
-	rsync -P -rvz --delete --exclude=repo --exclude=dl $(OUTPUTDIR)/ $(SSH_HOST):$(SSH_TARGET_DIR) --cvs-exclude
+	rsync -P -rvz --delete --exclude=build-logs --exclude=repo --exclude=dl $(OUTPUTDIR)/ $(SSH_HOST):$(SSH_TARGET_DIR) --cvs-exclude
 
 dropbox_upload: publish
 	cp -r $(OUTPUTDIR)/* $(DROPBOX_DIR)
